# agent-run-optimizer

./: .flake8  .gitignore  .isort.cfg  CLAUDE.md  README.md  pyproject.toml  record.py  run_example.py  stop-payload-debug.json
.claude/: settings.json  settings.local.json
.claude/agents/: run-analyzer.md
.claude/commands/: compare-runs.md
.claude/skills/agent-coding-style-reviewer/: SKILL.md
.claude/skills/export-graph/: SKILL.md
agent_runs/my-task-name/: METADATA.md  run-20260427-092428.yaml  run-20260427-101057.yaml  run-20260427-101459.yaml  run-20260427-104617.yaml  run-20260427-104755.yaml  run-20260427-104801.yaml  run-20260427-104833.yaml  run-20260427-105205.yaml  run-20260427-105242.yaml
agent_runs/test-incident-resolution/: METADATA.md  run-001.yaml  run-002.yaml  run-003.yaml
agent_runs/test-incident-resolution-2/: METADATA.md  run-001.yaml
agent_runs/test-incident-resolution-3/: run-002.yaml  run-003.yaml
docs/: CODING-STANDARDS.md  DEVTOOLS.md  HOOKS.md  STYLE.md
hooks/: capture_hook.py
runs/: incident-resolution.yaml
specs/: BACKEND_IMPLEMENTATION_PROGRESS.md  BACKEND_MISSING.md  BACKEND_README.md  BRAINSTORM.md  PLAN.md  UI_IMPLEMENTATION_PROGRESS.md  UI_MISSING.md  UI_README.md
src/agent_run_optimizer/: __init__.py
src/agent_run_optimizer/analysis/: __init__.py
src/agent_run_optimizer/capture/: __init__.py  claude_code_hooks.py  config.py  context.py  otel_exporter.py
src/agent_run_optimizer/graph/: __init__.py  models.py
src/agent_run_optimizer/storage/: __init__.py  base.py  schema.py  yaml_store.py
(+2 files in other folders)
